trasaction pie addons
final commit
