# build/swagger.json
@@ -1564,6 +1564,34 @@
 					}
 				}
 			}
+		},
+		"/transaction/chartdata": {
+			"post": {
+				"operationId": "PieChartTransactionData",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Expanses Transactions"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {}
+						}
+					}
+				}
+			}
 		}
 	},
 	"servers": [
